--- a/src/gui/About.fxml
+++ b/src/gui/About.fxml
@@ -5,10 +5,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox prefHeight="127.0" prefWidth="253.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/15.0.1">
+<VBox prefHeight="127.0" prefWidth="253.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label text="Label">
+      <Label text="About">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
