--- a/src/gui/SellerForm.fxml
+++ b/src/gui/SellerForm.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="151.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.DepartmentFormContorler">
+<AnchorPane prefHeight="151.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerFormControler">
    <children>
       <GridPane prefHeight="129.0" prefWidth="571.0">
         <columnConstraints>
